1770559 (Miscellaneous Java 5 Generics) from patch submitted by Bron Eubanks